[PMSH] Create subscription API changes with IPv4, IPv6 updates
Issue-ID: DCAEGEN2-2819
